--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.2.3",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "ether": "^0.0.9",
+    "ethers": "^6.13.4",
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-icons": "^5.3.0",
+    "web3": "^4.15.0",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "postcss": "^8",
