--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.2.3",
+    "@moralisweb3/common-evm-utils": "^2.27.2",
     "@walletconnect/web3-provider": "^1.8.0",
     "ether": "^0.0.9",
     "ethers": "^6.13.4",
+    "moralis": "^2.27.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
